--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "version": 2,
+  "framework": "nextjs",
   "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "framework": "next",
-  "cleanUrls": true
+  "devCommand": "npm run dev",
+  "installCommand": "npm ci"
 }
