--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,18 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Disable Next.js telemetry
+        run: npx next telemetry disable
+
       - name: Run ESLint
         run: npm run lint
+        env:
+          NEXT_TELEMETRY_DISABLED: 1
 
       - name: Type check
         run: npx tsc --noEmit
+        env:
+          NEXT_TELEMETRY_DISABLED: 1
 
       - name: Build project
         run: npm run build
